DEVELOP: updated readme file