@@ -1,18 +1,9 @@
-## Getting Started
+## Advanced Programming - Assignment 2
 
-Welcome to the VS Code Java world. Here is a guideline to help you get started to write Java code in Visual Studio Code.
+To run the compiled Data Analytics JAR file, use this command without the quotes:
 
-## Folder Structure
+"java -jar {module paths} {jar path}"
 
-The workspace contains two folders by default, where:
+E.g., 
 
-- `src`: the folder to maintain sources
-- `lib`: the folder to maintain dependencies
-
-Meanwhile, the compiled output files will be generated in the `bin` folder by default.
-
-> If you want to customize the folder structure, open `.vscode/settings.json` and update the related settings there.
-
-## Dependency Management
-
-The `JAVA PROJECTS` view allows you to manage your dependencies. More details can be found [here](https://github.com/microsoft/vscode-java-dependency#manage-dependencies).
+java -jar --module-path /Users/jcb/Documents/RMIT/SDK/javafx-sdk-21/lib/ --add-modules=javafx.controls,javafx.fxml,javafx.graphics,javafx.base '/Users/jcb/Documents/Java/data-analytics/data-analytics.jar'
